--- a/.htaccess
+++ b/.htaccess
@@ -13,18 +13,9 @@
   deny from all
 </Files>
 
-RewriteEngine On
+RewriteEngine 
 RewriteRule ^css/stylesheet.css			css/stylesheet.php
-RewriteCond %{HTTPS} !on
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*?)/?$ index.php?url=$1 [QSA,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+?)/$ index.php?url=$1 [QSA,L]
-
-<Files 403.shtml>
-order allow,deny
-allow from all
-</Files>
